# copier-agentic-app

./: .gitignore  CHANGES-HANDOVER.md  README.md  copier.yaml  pyproject.toml
.claude/: CLAUDE.md  JOURNAL.md
.claude/commands/: release.md
template/: .gitattributes  .gitignore  GOAL.md.jinja  INSTRUCTIONS.md.jinja  README.md.jinja
template/.claude/: CLAUDE.md.jinja
template/.claude/commands/: init-project.md  process.md  self-check.md
template/1-input/: README.md
template/2-work-in-progress/: CHECKLIST.md.jinja  README.md  terminologia.md.jinja
template/3-output/: README.md
template/4-references/: README.md  README.md.jinja  verification-framework.md.jinja
template/4-references/examples/: .gitkeep
template/4-references/knowledge/: .gitkeep
template/4-references/rules/: .gitkeep
template/agents/: README.md  README.md.jinja  project-manager-agent.md.jinja  reconnaissance-agent.md.jinja  verification-agent.md.jinja
template/doc/: README.md
template/src/: README.md  README.md.jinja
template/workflow/: README.md.jinja  phase-0-preprocessing.md.jinja  phase-1-analysis.md.jinja  phase-2-framework.md.jinja  phase-3-content-generation.md.jinja  phase-4-verification.md.jinja  phase-5-finalization.md.jinja  preflight.md.jinja  workflow.md.jinja
